tests/neg-macros/scope-extrusion/Test_2.scala

object Test_2 {
  test1() // error
  test2() // error
  test3() // error
}
